--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/bootstrap/material/material-fullpalette.min.css">
     <link rel="stylesheet" href="css/bootstrap/material/ripples.min.css">
 
-
     <title> SimpleShow !</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -15,18 +14,9 @@
 <div class="header-panel shadow-z-2">
     <div class="container-fluid">
         <h2>SimpleShow</h2>
+        <a href="#myshows" class="btn btn-primary navbar-btn pull-right">My Shows</a>
         <a href="#shows" class="btn btn-primary navbar-btn pull-right">Shows</a>
         <a href="#home" class="btn btn-primary navbar-btn pull-right">Home</a>
-    </div>
-
-
-</div>
-<div class="sample2">
-    <div class="text">Vibrate on touch</div>
-    <div class="checkbox checkbox-primary">
-        <label>
-            <input type="checkbox">
-        </label>
     </div>
 </div>
 <div ng-controller="simpleShowController">
