--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 <script src="scripts/angular/angular.min.js"></script>
 <script src="scripts/angular/angular-route.min.js"></script>
+<script src="scripts/lodash.js"></script>
 <script src="scripts/module/module.js"></script>
 <script src="scripts/routes/routes.js"></script>
 <script src="scripts/controllers/controller.js"></script>
