--- a/index.html
+++ b/index.html
@@ -24,17 +24,23 @@
     <div class="content" ng-view>
 
     </div>
+
+
 </div>
 <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="scripts/bootstrap/bootstrap.min.js"></script>
-
 <script src="scripts/angular/angular.min.js"></script>
 <script src="scripts/angular/angular-route.min.js"></script>
 <script src="scripts/lodash.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.1/ui-bootstrap-tpls.min.js"></script>
 <script src="scripts/module/module.js"></script>
 <script src="scripts/routes/routes.js"></script>
+<script type="text/javascript" src="scripts/factory/factory.js"></script>
 <script src="scripts/controllers/controller.js"></script>
+<script type="text/javascript" src="scripts/controllers/formControllers.js"></script>
+
 <script src="scripts/services/showService.js"></script>
+
 <script src="scripts/bootstrap/material/ripples.min.js"></script>
 <script src="scripts/bootstrap/material/arrive.min.js"></script>
 <script src="scripts/bootstrap/material/material.min.js"></script>
