--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <script type="text/javascript" src="scripts/controllers/formControllers.js"></script>
 <script src="scripts/services/showService.js"></script>
 <script src="scripts/services/episodeService.js"></script>
+<script src="scripts/bootstrap-notify.min.js"></script>
 
 <script src="scripts/bootstrap/material/ripples.min.js"></script>
 <script src="scripts/bootstrap/material/arrive.min.js"></script>
