--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap/material/material-fullpalette.min.css">
     <link rel="stylesheet" href="css/bootstrap/material/ripples.min.css">
+    <link rel="stylesheet" href="scripts/bootstrap-datepicker/css/datetimepicker.css">
 
     <title> SimpleShow !</title>
     <link rel="stylesheet" href="css/style.css">
@@ -48,7 +49,8 @@
 <script src="scripts/services/episodeService.js"></script>
 <script src="scripts/services/traktTvService.js"></script>
 <script src="scripts/bootstrap-notify.min.js"></script>
-
+<script src="scripts/moment.js"></script>
+<script src="scripts/bootstrap-datepicker/js/datetimepicker.js"></script>
 <script src="scripts/bootstrap/material/ripples.min.js"></script>
 <script src="scripts/bootstrap/material/arrive.min.js"></script>
 <script src="scripts/bootstrap/material/material.min.js"></script>
