--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <script src="scripts/routes/routes.js"></script>
 <script type="text/javascript" src="scripts/factory/factory.js"></script>
 <script src="scripts/controllers/controller.js"></script>
+<script src="scripts/controllers/importerController.js"></script>
 <script type="text/javascript" src="scripts/controllers/formControllers.js"></script>
 <script src="scripts/services/showService.js"></script>
 <script src="scripts/services/episodeService.js"></script>
