--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="header-panel shadow-z-2">
     <div class="container-fluid" ng-controller="headerController">
         <h2><a href="#home">SimpleShow</a></h2>
-
+          <p class="uesr-name">  {{user}}</p>
         <div class="logged-out" ng-show="logged">
             <a href="#register" class="btn btn-primary navbar-btn pull-right">Sign Up</a>
             <a href="#log-in" class="pull-right navbar-btn log-in">Log In</a>
