--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 <script src="scripts/controllers/importerController.js"></script>
 <script type="text/javascript" src="scripts/controllers/formControllers.js"></script>
 <script src="scripts/moment.js"></script>
-
 <script src="scripts/services/showService.js"></script>
 <script src="scripts/services/episodeService.js"></script>
 <script src="scripts/services/traktTvService.js"></script>
+<script src="scripts/services/importService.js"></script>
 <script src="scripts/bootstrap-notify.min.js"></script>
 <script src="scripts/angular-momentjs.js"></script>
 <script src="scripts/bootstrap-datepicker/js/datetimepicker.js"></script>
