--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body ng-controller="mainController" ng-class="routeClassName">
-<div class="navbar navbar-default" ng-controller="headerController">
+<div class="navbar navbar-material-grey-900" ng-controller="headerController">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
             <span class="icon-bar"></span>
